--- a/package.json
+++ b/package.json
@@ -6,15 +6,26 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.2",
+    "web-vitals": "^1.1.0",
+    "axios": "^0.21.0",
+    "react-query": "^3.5.6",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "react-router-dom": "^5.2.0",
+    "toasted-notes": "^3.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.1.3",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "typescript": "^4.1.3",
-    "web-vitals": "^1.1.0"
+    "@types/react-redux": "^7.1.13",
+    "@types/react-router-dom": "^5.1.6",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
