--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "axios": "^0.21.0",
+    "immer": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "web-vitals": "^1.1.0",
-    "axios": "^0.21.0",
     "react-query": "^3.5.6",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
     "react-router-dom": "^5.2.0",
-    "toasted-notes": "^3.2.0"
+    "react-scripts": "4.0.2",
+    "react-spring": "^8.0.27",
+    "redux": "^4.0.5",
+    "toasted-notes": "^3.2.0",
+    "web-vitals": "^1.1.0"
   },
   "devDependencies": {
     "typescript": "^4.1.3",
@@ -28,7 +30,7 @@
     "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3003 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
